[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Settings.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.529412, 0.807843, 0.921569, 1 )

[node name="Title" type="Label" parent="."]
margin_top = 100.0
margin_right = 576.0
margin_bottom = 195.0
custom_colors/font_color = Color( 0.0862745, 0.670588, 0.12549, 1 )
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1
valign = 1

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 231.0
margin_top = 299.0
margin_right = 307.0
margin_bottom = 339.0
rect_scale = Vector2( 1.5, 1.5 )
pressed = true

[node name="Music" type="Label" parent="."]
margin_left = 229.0
margin_top = 246.0
margin_right = 346.0
margin_bottom = 296.0
custom_fonts/font = SubResource( 2 )
text = "Music"
align = 1
valign = 1

[node name="CheckButton2" type="CheckButton" parent="."]
margin_left = 232.0
margin_top = 434.0
margin_right = 308.0
margin_bottom = 474.0
rect_scale = Vector2( 1.5, 1.5 )
pressed = true

[node name="SFX" type="Label" parent="."]
margin_left = 157.0
margin_top = 377.0
margin_right = 424.0
margin_bottom = 427.0
custom_fonts/font = SubResource( 2 )
text = "Sound Effects"
align = 1
valign = 1

[node name="Back" type="Button" parent="."]
margin_left = 125.0
margin_top = 800.0
margin_right = 236.0
margin_bottom = 820.0
rect_scale = Vector2( 3, 3 )
text = "Return to Menu"

[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="CheckButton2" to="." method="_on_CheckButton2_toggled"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
